assetsdir = ${datadir}/nbtk/assets
assets_DATA =    button-active.png \
		button-hover.png \
		button.png \
		default.css \
		Makefile.am \
		scroll-button-down-hover.png \
		scroll-button-down.png \
		scroll-button-up-hover.png \
		scroll-button-up.png \
		scroll-handle-hover.png \
		scroll-handle.png \
		text-entry.png


