styledir = ${datadir}/mx/style
dist_style_DATA = \
		button-disabled.png \
		button-active.png \
		button-hover.png \
		button.png \
		checkbox-background.png \
		checkbox-background-active.png \
		checkbox-background-disabled.png \
		checkbox-background-focus.png \
		checkbox-background-hover.png \
		checkbox-check.png \
		checkbox-check-disabled.png \
		combobox.png \
		combobox-hover.png \
		combobox-active.png \
		combobox-disabled.png \
		combobox-marker.png \
		combobox-marker-hover.png \
		combobox-marker-active.png \
		combobox-marker-disabled.png \
		combobox-toolbar.png \
		combobox-toolbar-marker.png \
		close.png \
		close-hover.png \
		default.css \
		entry.png \
		entry-active.png \
		entry-disabled.png \
		entry-hover.png \
		expander-arrow-down-hover.png \
		expander-arrow-down-disabled.png \
		expander-arrow-down.png \
		expander-arrow-up-hover.png \
		expander-arrow-up-disabled.png \
		expander-arrow-up.png \
		expander-closed.png \
		expander-closed-hover.png \
		expander-closed-active.png \
		expander-closed-disabled.png \
		expander-open.png \
		expander-open-hover.png \
		expander-open-active.png \
		expander-open-disabled.png \
		resize-grip.png \
		scroll-button-down-hover.png \
		scroll-button-down.png \
		scroll-button-up-hover.png \
		scroll-button-up.png \
		scroll-button-left-hover.png \
		scroll-button-left.png \
		scroll-button-right-hover.png \
		scroll-button-right.png \
		scroll-hhandle.png \
		scroll-hhandle-hover.png \
		scroll-vhandle.png \
		scroll-vhandle-hover.png \
		slider-background-active.png \
		slider-background-disabled.png \
		slider-background-focus.png \
		slider-background-hover.png \
		slider-background.png \
		slider-handle-active.png \
		slider-handle-disabled.png \
		slider-handle-focus.png \
		slider-handle-hover.png \
		slider-handle.png \
		menu-item.png \
		menu.png \
		menu-toolbar.png \
		pathbar-button.png \
		pathbar-button-active.png \
		pathbar-button-focus.png \
		pathbar-button-hover.png \
		pathbar-button-last.png \
		pathbar-button-last-active.png \
		pathbar-button-last-focus.png \
		pathbar-button-last-hover.png \
		progress-bar-background.png \
		progress-bar-bar.png \
		toggle-background-active.png \
		toggle-background-disabled.png \
		toggle-background.png \
		toggle-handle.png \
		toggle-handle-disabled.png \
		toolbar-button-hover.png \
		tooltip-background.png

-include $(top_srcdir)/git.mk

